# akv-tui

./: README.md  pyproject.toml
.github/workflows/: release.yml  tox-tests.yml
src/akv_tui/: app.py
